--- a/index.html
+++ b/index.html
@@ -1,22 +1,103 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
-    <style>
-      .masar-logo {
-        max-height: 1000px;
-        background-color: #00c4cc;
-        border-radius: 8px;
-        padding: 4px;
-      }
-    </style>
-    <script>
-      function addParticipant() {
-        const container = document.getElementById("participants-container");
-        const index = container.children.length + 1;
-        const id = `participant-${Date.now()}`;
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Moroccan Youth Athletic Festival - Spring 2025 Registration</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <script src="https://www.paypal.com/sdk/js?client-id=ASNXc-c_Ozu9IRC4ILp5oC6VOLz18amVlbYfVnKYA2kvJIBlQnoLUPP-Rdz4J_vyMD5toHUwg-OQH-OX&currency=USD"></script>
+  <style>
+    .masar-logo {
+      max-height: 120px;
+      background-color: #00c4cc;
+      border-radius: 8px;
+      padding: 4px;
+    }
+  </style>
+</head>
+<body>
+  <section class="hero is-primary is-bold">
+    <div class="hero-body">
+      <div class="container">
+        <div class="columns is-vcentered">
+          <div class="column has-text-centered">
+            <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025</h1>
+            <h2 class="subtitle is-4">Registration Form</h2>
+          </div>
+          <div class="column is-narrow">
+            <figure class="image is-128x128">
+              <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/MASAR_Logo_Transparent%20(1).png?raw=true" alt="MASAR Logo" class="masar-logo">
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-        const html = `
+  <form id="form" class="container m-4 pl-4" method="POST">
+    <h2 class="title is-4 mt-5">Parent Information</h2>
+    <div class="field">
+      <label class="label">Full Name</label>
+      <div class="control">
+        <input class="input" type="text" name="Parent Full Name" placeholder="Full Name" required>
+      </div>
+    </div>
+    <div class="field">
+      <label class="label">Email</label>
+      <div class="control">
+        <input class="input" type="email" name="Parent Email" placeholder="Email Address" required>
+      </div>
+    </div>
+    <div class="field">
+      <label class="label">Phone Number</label>
+      <div class="control">
+        <input class="input" type="tel" name="Parent Phone" placeholder="Phone Number" required>
+      </div>
+    </div>
+
+    <h2 class="title is-4 mt-5">Participant Information</h2>
+    <div id="participants-container"></div>
+    <div class="field">
+      <div class="control">
+        <button class="button is-info" type="button" onclick="addParticipant()">Add Participant</button>
+      </div>
+    </div>
+
+    <h2 class="title is-4 mt-5">Waiver & Consent</h2>
+    <div class="field">
+      <div class="control">
+        <textarea class="textarea" readonly>
+I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
+        </textarea>
+      </div>
+    </div>
+    <div class="field">
+      <div class="control">
+        <label class="checkbox">
+          <input type="checkbox" name="Waiver Consent" required> I have read and agree to the above waiver.
+        </label>
+      </div>
+    </div>
+
+    <div id="paypal-button-container" class="mt-5"></div>
+    <div class="field is-grouped mt-4">
+      <div class="control">
+        <button class="button is-primary" type="submit" id="submit-button" disabled>Submit</button>
+      </div>
+      <div class="control">
+        <button class="button is-danger" type="reset">Cancel</button>
+      </div>
+    </div>
+  </form>
+
+  <div id="message" style="display: none; margin: 20px; font-weight: bold; color: green; padding: 8px; background-color: beige; border-radius: 4px;"></div>
+
+  <script>
+    function addParticipant() {
+      const container = document.getElementById("participants-container");
+      const index = container.children.length + 1;
+      const id = `participant-${Date.now()}`;
+      const html = `
         <div class="box mt-4" id="${id}">
           <div class="is-flex is-justify-content-space-between">
             <h3 class="title is-5">Participant ${index}</h3>
@@ -25,36 +106,32 @@
           <div class="field">
             <label class="label">First Name</label>
             <div class="control">
-              <input class="input" type="text" name="Participant First Name[]" placeholder="First Name" required />
+              <input class="input" type="text" name="Participant First Name[]" required>
             </div>
           </div>
-
           <div class="field">
             <label class="label">Last Name</label>
             <div class="control">
-              <input class="input" type="text" name="Participant Last Name[]" placeholder="Last Name" required />
+              <input class="input" type="text" name="Participant Last Name[]" required>
             </div>
           </div>
-
           <div class="field">
             <label class="label">Date of Birth</label>
             <div class="control">
-              <input class="input" type="date" name="Participant DOB[]" required />
+              <input class="input" type="date" name="Participant DOB[]" required>
             </div>
           </div>
-
           <div class="field">
             <label class="label">Gender</label>
             <div class="control">
               <label class="radio">
-                <input type="radio" name="Gender[${index-1}]" value="male" required onchange="toggleSoccerLevel('${id}', true)" /> Male
+                <input type="radio" name="Gender[${index-1}]" value="male" required onchange="toggleSoccerLevel('${id}', true)"> Male
               </label>
               <label class="radio">
-                <input type="radio" name="Gender[${index-1}]" value="female" onchange="toggleSoccerLevel('${id}', false)" /> Female
+                <input type="radio" name="Gender[${index-1}]" value="female" onchange="toggleSoccerLevel('${id}', false)"> Female
               </label>
             </div>
           </div>
-
           <div class="field soccer-level" id="soccer-${id}">
             <label class="label">Soccer Level</label>
             <div class="control">
@@ -67,169 +144,82 @@
             </div>
           </div>
         </div>`;
+      container.insertAdjacentHTML("beforeend", html);
+    }
 
-        container.insertAdjacentHTML("beforeend", html);
+    function removeParticipant(id) {
+      const element = document.getElementById(id);
+      if (element) {
+        element.remove();
       }
+    }
 
-      function removeParticipant(id) {
-        const element = document.getElementById(id);
-        if (element) {
-          element.remove();
-        }
+    function toggleSoccerLevel(participantId, show) {
+      const el = document.getElementById(`soccer-${participantId}`);
+      if (el) {
+        el.style.display = show ? 'block' : 'none';
       }
+    }
 
-      function toggleSoccerLevel(participantId, show) {
-        const el = document.getElementById(`soccer-${participantId}`);
-        if (el) {
-          el.style.display = show ? 'block' : 'none';
-        }
-      }
-    </script>
-  </head>
-  <body>
-    <section class="hero is-primary is-bold">
-      <div class="hero-body">
-        <div class="container">
-          <div class="columns is-vcentered">
-            <div class="column has-text-centered">
-              <h1 class="title">Moroccan Youth Athletic Festival - Spring 2025</h1>
-              <h2 class="subtitle is-4">Registration Form</h2>
-            </div>
-            <div class="column is-narrow">
-              <figure class="image is-128x128">
-                <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/MASAR_Logo_Transparent%20(1).png?raw=true" alt="MASAR Logo" class="masar-logo">
-              </figure>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Remaining HTML unchanged -->
-	<form id="form" class="container m-4 pl-4" method="POST">
-      <!-- Parent Info -->
-      <h2 class="title is-4 mt-5">Parent Information</h2>
-      <div class="field">
-        <label class="label">Full Name</label>
-        <div class="control">
-          <input class="input" type="text" name="Parent Full Name" placeholder="Full Name" required />
-        </div>
-      </div>
-
-      <div class="field">
-        <label class="label">Email</label>
-        <div class="control">
-          <input class="input" type="email" name="Parent Email" placeholder="Email Address" required />
-        </div>
-      </div>
-
-      <div class="field">
-        <label class="label">Phone Number</label>
-        <div class="control">
-          <input class="input" type="tel" name="Parent Phone" placeholder="Phone Number" required />
-        </div>
-      </div>
-
-      <!-- Participant Info -->
-      <h2 class="title is-4 mt-5">Participant Information</h2>
-      <div id="participants-container"></div>
-      <div class="field">
-        <div class="control">
-          <button class="button is-info" type="button" onclick="addParticipant()">Add Participant</button>
-        </div>
-      </div>
-
-      <!-- Waiver Section -->
-      <h2 class="title is-4 mt-5">Waiver & Consent</h2>
-      <div class="field">
-        <div class="control">
-          <textarea class="textarea" readonly>
-I, the parent or legal guardian of the participant, give permission for my child to take part in the Moroccan Youth Athletic Festival. I understand that participation in sports involves certain risks of injury and voluntarily assume all such risks. I release MASAR, event organizers, coaches, and volunteers from any liability for injuries or damages that may occur during the event. I authorize emergency medical treatment if needed and accept responsibility for any associated costs. I also give permission for my child’s photos or videos to be used for promotional purposes without compensation. I confirm my child is in good health and able to participate.
-          </textarea>
-        </div>
-      </div>
-
-      <div class="field">
-        <div class="control">
-          <label class="checkbox">
-            <input type="checkbox" name="Waiver Consent" required /> I have read and agree to the above waiver.
-          </label>
-        </div>
-      </div>
-
-      <!-- Submit Buttons -->
-      <div class="field is-grouped">
-        <div class="control">
-          <button class="button is-primary" type="submit" id="submit-button">Submit</button>
-        </div>
-        <div class="control">
-          <button class="button is-danger" type="reset">Cancel</button>
-        </div>
-      </div>
-    </form>
-
-    <div id="message" style="display: none; margin: 20px; font-weight: bold; color: green; padding: 8px; background-color: beige; border-radius: 4px; border-color: aquamarine;"></div>
-
-    <!-- Form Submission Script -->
-    <script>
-      document.getElementById("form").addEventListener("submit", function (e) {
-        e.preventDefault();
-        document.getElementById("message").textContent = "Submitting..";
-        document.getElementById("message").style.display = "block";
-        document.getElementById("submit-button").disabled = true;
-
-	// 🛠️ Remove soccer level fields for girls (hidden dropdowns)
-	document.querySelectorAll('.soccer-level').forEach(el => {
-	  if (el.style.display === 'none') {
-	    const select = el.querySelector('select');
-	    if (select) {
-	      select.removeAttribute('name'); // prevent from being submitted
-	    }
-	  }
-	});
-
-        var formData = new FormData(this);
-        var keyValuePairs = [];
-        for (var pair of formData.entries()) {
-          keyValuePairs.push(pair[0] + "=" + encodeURIComponent(pair[1]));
-        }
-
-        var formDataString = keyValuePairs.join("&");
-
-        fetch("https://script.google.com/macros/s/AKfycbxxtQnrbYjg06wBU30dmORSk3ef_bDZ-Qju5vaLJXx14vM80bNKFbsOo59GA_8do0Nw/exec", {
-          redirect: "follow",
-          method: "POST",
-          body: formDataString,
-          headers: {
-            "Content-Type": "text/plain;charset=utf-8",
-          },
-        })
-          .then(function (response) {
-            if (response) {
-              return response;
-            } else {
-              throw new Error("Failed to submit the form.");
+    paypal.Buttons({
+      createOrder: function(data, actions) {
+        const participantCount = document.querySelectorAll('#participants-container .box').length;
+        const totalAmount = participantCount * 10 || 10;
+        return actions.order.create({
+          purchase_units: [{
+            amount: {
+              value: totalAmount.toFixed(2)
             }
-          })
-          .then(function () {
-            document.getElementById("message").textContent = "Data submitted successfully!";
-            document.getElementById("message").style.display = "block";
-            document.getElementById("message").style.backgroundColor = "green";
-            document.getElementById("message").style.color = "beige";
-            document.getElementById("submit-button").disabled = false;
-            document.getElementById("form").reset();
-            document.getElementById("participants-container").innerHTML = "";
+          }]
+        });
+      },
+      onApprove: function(data, actions) {
+        return actions.order.capture().then(function(details) {
+          alert('Payment completed by ' + details.payer.name.given_name);
+          document.getElementById("submit-button").disabled = false;
+        });
+      }
+    }).render('#paypal-button-container');
 
-            setTimeout(function () {
-              document.getElementById("message").textContent = "";
-              document.getElementById("message").style.display = "none";
-            }, 2600);
-          })
-          .catch(function (error) {
-            console.error(error);
-            document.getElementById("message").textContent = "An error occurred while submitting the form.";
-            document.getElementById("message").style.display = "block";
-          });
+    document.getElementById("form").addEventListener("submit", function(e) {
+      e.preventDefault();
+      document.getElementById("message").textContent = "Submitting..";
+      document.getElementById("message").style.display = "block";
+
+      document.querySelectorAll('.soccer-level').forEach(el => {
+        if (el.style.display === 'none') {
+          const select = el.querySelector('select');
+          if (select) {
+            select.removeAttribute('name');
+          }
+        }
       });
-    </script>
-  </body>
+
+      var formData = new FormData(this);
+      var keyValuePairs = [];
+      for (var pair of formData.entries()) {
+        keyValuePairs.push(pair[0] + "=" + encodeURIComponent(pair[1]));
+      }
+      var formDataString = keyValuePairs.join("&");
+
+      fetch("https://script.google.com/macros/s/AKfycbxxtQnrbYjg06wBU30dmORSk3ef_bDZ-Qju5vaLJXx14vM80bNKFbsOo59GA_8do0Nw/exec", {
+        method: "POST",
+        body: formDataString,
+        headers: {
+          "Content-Type": "text/plain;charset=utf-8",
+        }
+      }).then(function(response) {
+        document.getElementById("message").textContent = "Data submitted successfully!";
+        document.getElementById("message").style.backgroundColor = "green";
+        document.getElementById("message").style.color = "beige";
+        document.getElementById("submit-button").disabled = true;
+        document.getElementById("form").reset();
+        document.getElementById("participants-container").innerHTML = "";
+      }).catch(function(error) {
+        console.error(error);
+        document.getElementById("message").textContent = "An error occurred while submitting the form.";
+      });
+    });
+  </script>
+</body>
 </html>
