--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Moroccan Youth Athletic Festival - Spring 2025 Registration</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <script src="https://www.paypal.com/sdk/js?client-id=ASNXc-c_Ozu9IRC4ILp5oC6VOLz18amVlbYfVnKYA2kvJIBlQnoLUPP-Rdz4J_vyMD5toHUwg-OQH-OX&currency=USD"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID&currency=USD"></script>
   <style>
     .masar-logo {
       max-height: 120px;
@@ -79,7 +79,13 @@ I, the parent or legal guardian of the participant, give permission for my child
       </div>
     </div>
 
-    <div id="paypal-button-container" class="mt-5"></div>
+    <div id="proceed-container" class="field mt-5">
+      <div class="control">
+        <button class="button is-warning" type="button" onclick="startPayPal()">Proceed to Payment</button>
+      </div>
+    </div>
+    <div id="paypal-button-container" class="mt-4" style="display:none;"></div>
+
     <div class="field is-grouped mt-4">
       <div class="control">
         <button class="button is-primary" type="submit" id="submit-button" disabled>Submit</button>
@@ -161,25 +167,30 @@ I, the parent or legal guardian of the participant, give permission for my child
       }
     }
 
-    paypal.Buttons({
-      createOrder: function(data, actions) {
-        const participantCount = document.querySelectorAll('#participants-container .box').length;
-        const totalAmount = participantCount * 10 || 10;
-        return actions.order.create({
-          purchase_units: [{
-            amount: {
-              value: totalAmount.toFixed(2)
-            }
-          }]
-        });
-      },
-      onApprove: function(data, actions) {
-        return actions.order.capture().then(function(details) {
-          alert('Payment completed by ' + details.payer.name.given_name);
-          document.getElementById("submit-button").disabled = false;
-        });
-      }
-    }).render('#paypal-button-container');
+    function startPayPal() {
+      document.getElementById('proceed-container').style.display = 'none';
+      document.getElementById('paypal-button-container').style.display = 'block';
+
+      paypal.Buttons({
+        createOrder: function(data, actions) {
+          const participantCount = document.querySelectorAll('#participants-container .box').length;
+          const totalAmount = participantCount * 10 || 10;
+          return actions.order.create({
+            purchase_units: [{
+              amount: {
+                value: totalAmount.toFixed(2)
+              }
+            }]
+          });
+        },
+        onApprove: function(data, actions) {
+          return actions.order.capture().then(function(details) {
+            alert('Payment completed by ' + details.payer.name.given_name);
+            document.getElementById('submit-button').disabled = false;
+          });
+        }
+      }).render('#paypal-button-container');
+    }
 
     document.getElementById("form").addEventListener("submit", function(e) {
       e.preventDefault();
