--- a/index.html
+++ b/index.html
@@ -165,14 +165,6 @@ function addParticipant() {
   updateTotalAmount();
 }
 
-function removeParticipant(id) {
-  const element = document.getElementById(id);
-  if (element) {
-    element.remove();
-  }
-  updateTotalAmount();
-}
-
 function toggleSoccerLevel(participantId, show) {
   const el = document.getElementById(`soccer-${participantId}`);
   if (el) {
@@ -229,16 +221,36 @@ function startPayPal() {
     },
     onApprove: function(data, actions) {
       return actions.order.capture().then(function(details) {
-        document.getElementById('form').submit();
+        sendFormData();
       });
     }
   }).render('#paypal-button-container');
 }
 
-document.getElementById('form').addEventListener('submit', function(e) {
-  e.preventDefault();
-  window.location.href = "thank-you.html";
-});
+function sendFormData() {
+  const form = document.getElementById('form');
+  const formData = new FormData(form);
+  const keyValuePairs = [];
+
+  for (let pair of formData.entries()) {
+    keyValuePairs.push(`${pair[0]}=${encodeURIComponent(pair[1])}`);
+  }
+
+  const formDataString = keyValuePairs.join("&");
+
+  fetch("https://script.google.com/macros/s/AKfycbxxtQnrbYjg06wBU30dmORSk3ef_bDZ-Qju5vaLJXx14vM80bNKFbsOo59GA_8do0Nw/exec", {
+    method: "POST",
+    body: formDataString,
+    headers: {
+      "Content-Type": "text/plain;charset=utf-8",
+    }
+  }).then(response => {
+    window.location.href = "thank-you.html";
+  }).catch(error => {
+    console.error('Form submit error:', error);
+    alert('There was a problem submitting your registration.');
+  });
+}
 </script>
 
 </body>
