--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@ function addParticipant() {
         <label class="label">Gender</label>
         <div class="control">
           <label class="radio">
-            <input type="radio" name="Gender[${index}]" value="male" required onchange="toggleSoccerLevel('${id}', true)"> Male
+            <input type="radio" name="Gender[${index}]" value="boy" required onchange="toggleSoccerLevel('${id}', true)"> Boy (Soccer)
           </label>
           <label class="radio">
-            <input type="radio" name="Gender[${index}]" value="female" onchange="toggleSoccerLevel('${id}', false)"> Female
+            <input type="radio" name="Gender[${index}]" value="girl" onchange="toggleSoccerLevel('${id}', false)"> Girl (Race)
           </label>
         </div>
       </div>
