--- a/thank-you.html
+++ b/thank-you.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Thank You - Moroccan Youth Athletic Festival</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
@@ -12,6 +13,18 @@
         <h1 class="title is-1">Thank You!</h1>
         <h2 class="subtitle is-3 mt-4">Your registration has been successfully submitted.</h2>
         <p class="mt-5">We look forward to seeing you at the Moroccan Youth Athletic Festival - Spring 2025!</p>
+        
+        <section class="section mt-6">
+          <h2 class="title is-4">Stay Updated!</h2>
+          <p class="mb-4">Join our event WhatsApp Group for updates and announcements:</p>
+          <a href="https://chat.whatsapp.com/HkkY7vRn5q093PYmy9TDPk" target="_blank" class="button is-success is-medium mb-4">
+            Join WhatsApp Group
+          </a>
+          <div class="mt-4">
+            <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://chat.whatsapp.com/HkkY7vRn5q093PYmy9TDPk" alt="Join WhatsApp Group QR Code">
+          </div>
+        </section>
+
       </div>
     </div>
   </section>
