--- a/thank-you.html
+++ b/thank-you.html
@@ -5,13 +5,31 @@
   <title>Thank You - Moroccan Youth Athletic Festival</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <style>
+    .masar-logo {
+      max-height: 120px;
+      background-color: #00c4cc;
+      border-radius: 8px;
+      padding: 4px;
+    }
+  </style>
 </head>
 <body>
   <section class="hero is-primary is-fullheight is-bold">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title is-1">Thank You!</h1>
-        <h2 class="subtitle is-3 mt-4">Your registration has been successfully submitted.</h2>
+        <div class="columns is-vcentered mb-6">
+          <div class="column has-text-centered">
+            <h1 class="title is-1">Thank You!</h1>
+            <h2 class="subtitle is-3 mt-4">Your registration has been successfully submitted.</h2>
+          </div>
+          <div class="column is-narrow">
+            <figure class="image is-128x128">
+              <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/MASAR_Logo_Transparent%20(1).png?raw=true" alt="MASAR Logo" class="masar-logo">
+            </figure>
+          </div>
+        </div>
+
         <p class="mt-5">We look forward to seeing you at the Moroccan Youth Athletic Festival - Spring 2025!</p>
         
         <section class="section mt-6">
