--- a/thank-you.html
+++ b/thank-you.html
@@ -1,50 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Thank You - Moroccan Youth Athletic Festival</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <style>
-    .masar-logo {
-      max-height: 120px;
-      background-color: #00c4cc;
-      border-radius: 8px;
-      padding: 4px;
-    }
-  </style>
-</head>
-<body>
-  <section class="hero is-primary is-fullheight is-bold">
-    <div class="hero-body">
-      <div class="container has-text-centered">
-        <div class="columns is-vcentered mb-6">
-          <div class="column has-text-centered">
-            <h1 class="title is-1">Thank You!</h1>
-            <h2 class="subtitle is-3 mt-4">Your registration has been successfully submitted.</h2>
-          </div>
-          <div class="column is-narrow">
-            <figure class="image is-128x128">
-              <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/MASAR_Logo_Transparent%20(1).png?raw=true" alt="MASAR Logo" class="masar-logo">
-            </figure>
-          </div>
-        </div>
+<div class="container has-text-centered">
+  <figure class="image is-128x128 is-inline-block mb-4">
+    <img src="https://github.com/zlaflous/Moroccan-Youth-Athletic-Festival-Tournament-Registration/blob/main/masar-logo.png?raw=true" alt="MASAR Logo" class="masar-logo">
+  </figure>
+  <h1 class="title is-1">Thank You!</h1>
+  <h2 class="subtitle is-3 mt-4">Your registration has been successfully submitted.</h2>
+  <p class="mt-5">We look forward to seeing you at the Moroccan Youth Athletic Festival - Spring 2025!</p>
 
-        <p class="mt-5">We look forward to seeing you at the Moroccan Youth Athletic Festival - Spring 2025!</p>
-        
-        <section class="section mt-6">
-          <h2 class="title is-4">Stay Updated!</h2>
-          <p class="mb-4">Join our event WhatsApp Group for updates and announcements:</p>
-          <a href="https://chat.whatsapp.com/HkkY7vRn5q093PYmy9TDPk" target="_blank" class="button is-success is-medium mb-4">
-            Join WhatsApp Group
-          </a>
-          <div class="mt-4">
-            <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://chat.whatsapp.com/HkkY7vRn5q093PYmy9TDPk" alt="Join WhatsApp Group QR Code">
-          </div>
-        </section>
-
-      </div>
+  <!-- WhatsApp Section -->
+  <section class="section mt-6">
+    <h2 class="title is-4">Stay Updated!</h2>
+    <p class="mb-4">Join our event WhatsApp Group for updates and announcements:</p>
+    <a href="https://chat.whatsapp.com/HkkY7vRn5q093PYmy9TDPk" target="_blank" class="button is-success is-medium mb-4">
+      Join WhatsApp Group
+    </a>
+    <div class="mt-4">
+      <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://chat.whatsapp.com/HkkY7vRn5q093PYmy9TDPk" alt="Join WhatsApp Group QR Code">
     </div>
   </section>
-</body>
-</html>
+</div>
